sg.tf
resource "aws_security_group" "bastion" {
  name        = "bastion-server-sg"

  # SSH access from anywhere
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
